--- a/Kubernetes/02_services/clusterip/httpd_cip_deploy.yaml
+++ b/Kubernetes/02_services/clusterip/httpd_cip_deploy.yaml
@@ -20,3 +20,17 @@ spec:
           image: httpd
           ports:
             - containerPort: 80          
+---
+apiVersion: v1 
+kind: Service
+metadata:
+  name: httpd-service
+  labels:
+    app: httpd
+spec: 
+  selector:
+    app: httpd 
+  ports:
+  - port: 80  #Service Port
+    targetPort: 80  #Pod Port
+  type: ClusterIP  #Internal Access
