--- a/Kubernetes/02_services/nodeport/nginx_np_deploy.yaml
+++ b/Kubernetes/02_services/nodeport/nginx_np_deploy.yaml
@@ -20,3 +20,17 @@ spec:
           image: nginx 
           ports:
             - containerPort: 80
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: nginx-np-service
+  labels:
+    app: nginx
+spec:
+  selector:
+    app: nginx
+  ports:
+  - port: 80
+    targetPort: 80
+  type: NodePort  #External Access
