prometheus code added

--- a/Kubernetes/11_misc/tolerations.yaml
+++ b/Kubernetes/11_misc/tolerations.yaml
@@ -1,3 +1,9 @@
+#To add label and taint
+# kubectl label node <node name> gpuEnabled=yes (per below node selector attribute)
+# kubectl taint node <node name> gpuEnabled=yes:Noschedule (per below tolerations)
+#To remove label and taint
+# kubectl label node <node name> gpuEnabled- (per below node selector attribute)
+# kubectl taint node <node name> gpuEnabled:Noschedule-  (per below tolerations)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
